# ngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
application/gui/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/private/: application.cpp  keyboard.cpp
modules/app/public/ng/app/: application.hpp  keyboard.hpp  mouse.hpp
modules/asset/: CMakeLists.txt
modules/asset/private/: asset.cpp  asset_factory.cpp  asset_package.cpp  asset_package_stream.cpp  asset_registry.cpp  asset_view.cpp
modules/asset/public/ng/asset/: asset.hpp  asset_factory.hpp  asset_package.hpp  asset_package_stream.hpp  asset_registry.hpp  asset_view.hpp
modules/core/: CMakeLists.txt
modules/core/private/: hash.cpp  name.cpp  name_table.cpp  name_table.hpp  string_name.cpp  transform2d.cpp
modules/core/public/ng/core/: endian.hpp  hash.hpp  memory_pool.hpp  name.hpp  string_name.hpp  time.hpp  transform2d.hpp
modules/deser/: CMakeLists.txt
modules/deser/private/: object_deserializer.cpp  object_xml_deserializer.cpp  object_xml_deserializer.hpp
modules/deser/public/ng/deser/: object_archive_traits.hpp  object_deserializer.hpp
modules/gameplay/: CMakeLists.txt
modules/gameplay/private/: game_instance.cpp  node.cpp  node2d.cpp  node_path.cpp  node_tree.cpp
modules/gameplay/public/ng/gameplay/: game_instance.hpp  node.hpp  node2d.hpp  node_path.hpp  node_tree.hpp
modules/gpu/: CMakeLists.txt
modules/gpu/private/: gpu_buffer.cpp  gpu_context.cpp  gpu_program.cpp  gpu_shader.cpp  gpu_texture2d.cpp  gpu_vertex_layout.cpp  opengl_helpers.cpp  opengl_helpers.hpp
modules/gpu/public/ng/gpu/: gpu_buffer.hpp  gpu_context.hpp  gpu_pixel_formats.hpp  gpu_program.hpp  gpu_shader.hpp  gpu_texture2d.hpp  gpu_texture_filtering.hpp  gpu_texture_wrapping.hpp  gpu_vertex_attribute.hpp  gpu_vertex_layout.hpp
tests/unit/: CMakeLists.txt
tests/unit/asset/: package.cpp
tests/unit/core/: endian.cpp  hash.cpp  memory_pool.cpp  name.cpp  transform2d.cpp
tests/unit/deser/: xml_loader.cpp
tests/unit/gameplay/: node2d.cpp  node_path.cpp  node_tree.cpp
thirdparties/: CMakeLists.txt
thirdparties/glad/: CMakeLists.txt
thirdparties/glad/include/glad/: glad.h
thirdparties/glad/src/: glad.c
thirdparties/jsoncpp/: CMakeLists.txt
thirdparties/pugixml/: CMakeLists.txt
thirdparties/toml++/: CMakeLists.txt
